# KOL

./: CMakeLists.txt  README.md  index.html
Eigen/: down.txt
python/: cross.py  german  learn.py  rand.py
sample_dataset/: a9a_train
src/: Params.cpp  Params.h  main.cpp  makefile
src/common/: init_param.h
src/kernel/: kernel_fogd.h  kernel_nogd.h  kernel_optim.h
